kiki/src/examples/should_fail/lowercase_nonterminal.kiki
start epsilon

struct epsilon

terminal Token {
    $Num: isize
}
